--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,9 +1,8 @@
 .custom-bg{
     background-image: url(../../../public/slider.jpg);
-    top:0%;
+   
+    background-image: url(../../../public/slider.jpg);
     background-size: cover;
-    /* display: block; */
-    min-height: 90vh;
-    position: relative;
+    min-height: 100vh;
     
 }
